fix aligns

--- a/source/styles/blocks/card.less
+++ b/source/styles/blocks/card.less
@@ -30,6 +30,7 @@
   line-height: 20px;
   font-weight: bold;
   margin: 4px 19px 0 0;
+  flex-shrink: 0;
 }
 
 .card-name {
@@ -49,6 +50,7 @@
   margin: 0 0 0 auto;
   padding: 6px 10px 6px 8px;
   background-color: @light-grey;
+  flex-shrink: 0;
   color: @grey;
   display: flex;
   align-items: center;
